carpool/css/main.css
/* ... */
#carpool .pl-8 {
    padding-left: 112px;
}

#carpool .pl-9 {
    padding-left: 126px;
}

#carpool .pl-10 {
    padding-left: 140px;
}

#carpool .pr-1 {
    padding-right: 14px;
}

#carpool .pr-2 {
    padding-right: 28px;
}

#carpool .pr-3 {
    padding-right: 42px;
}

#carpool .pr-4 {
    padding-right: 56px;
}

#carpool .pr-5 {
    padding-right: 70px;
}

#carpool .pr-6 {
    padding-right: 84px;
}

#carpool .pr-7 {
    padding-right: 98px;
}

#carpool .pr-8 {
    padding-right: 112px;
}

#carpool .pr-9 {
    padding-right: 126px;
}

#carpool .pr-10 {
    padding-right: 140px;
}

#carpool .mt-1 {
    margin-top: 14px;
}

#carpool .mt-2 {
    margin-top: 28px;
}

#carpool .mt-3 {
    margin-top: 42px;
}

#carpool .mt-4 {
    margin-top: 56px;
}

#carpool .mt-5 {
    margin-top: 70px;
}

#carpool .mt-6 {
    margin-top: 84px;
}

#carpool .mt-7 {
    margin-top: 98px;
}

#carpool .mt-8 {
    margin-top: 112px;
}

#carpool .mt-9 {
    margin-top: 126px;
}

#carpool .mt-10 {
    margin-top: 140px;
}

#carpool .mb-1 {
    margin-bottom: 14px;
}

#carpool .mb-2 {
    margin-bottom: 28px;
}

#carpool .mb-3 {
    margin-bottom: 42px;
}

#carpool .mb-4 {
    margin-bottom: 56px;
}

#carpool .mb-5 {
    margin-bottom: 70px;
}

#carpool .mb-6 {
    margin-bottom: 84px;
}

#carpool .mb-7 {
    margin-bottom: 98px;
}

#carpool .mb-8 {
    margin-bottom: 112px;
}

#carpool .mb-9 {
    margin-bottom: 126px;
}

#carpool .mb-10 {
    margin-bottom: 140px;
}

#carpool .ml-1 {
    margin-left: 14px;
}

#carpool .ml-2 {
    margin-left: 28px;
}

#carpool .ml-3 {
    margin-left: 42px;
}

#carpool .ml-4 {
    margin-left: 56px;
}

#carpool .ml-5 {
    margin-left: 70px;
}

#carpool .ml-6 {
    margin-left: 84px;
}

#carpool .ml-7 {
    margin-left: 98px;
}

#carpool .ml-8 {
    margin-left: 112px;
}

#carpool .ml-9 {
    margin-left: 126px;
}

#carpool .ml-10 {
    margin-left: 140px;
}

#carpool .mr-1 {
    margin-right: 14px;
}

#carpool .mr-2 {
    margin-right: 28px;
}

#carpool .mr-3 {
    margin-right: 42px;
}

#carpool .mr-4 {
    margin-right: 56px;
}

#carpool .mr-5 {
    margin-right: 70px;
}

#carpool .mr-6 {
    margin-right: 84px;
}

#carpool .mr-7 {
    margin-right: 98px;
}

#carpool .mr-8 {
    margin-right: 112px;
}

#carpool .mr-9 {
    margin-right: 126px;
}

#carpool .mr-10 {
    margin-right: 140px;
}


/* Background colors */

#carpool .background-light {
    background-color: #FFF;
}

#carpool .bg-darkGreen {
    background: #309600;
}

#carpool .bg-green {
    background: #68bc47;
}

#carpool .bg-lightGreen {
    background: #a2e03f;
}

#carpool .bg-yellow {
    background: #f9ec31;
}


/* Color */

#carpool .green {
    color: #68bc47;
}

#carpool .lightGreen {
    color: #a2e03f;
}

#carpool .darkGreen {
    color: #309600;
}

#carpool .yellow {
    color: #f9ec31;
}

#carpool .gray {
    color: #999999;
}

#carpool .pageNavLink.active {
    font-weight: 700;
}

#carpool .header .dropdownContainer .pageNavLink.active {
    font-weight: 400;
}

#carpool .carpool-page {
    overflow: hidden;
    position: relative;
    z-index: 10;
    background-color: #FFF;
    -moz-box-shadow: 0 0 30px rgba(0,0,0,0.8)
    -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.8);
    box-shadow: 0 0 30px rgba(0,0,0,0.8);
}

#carpool .topMediaContainer {
    width: 100%;
    height: 100%;
}

#carpool .innerContainer {
    position: relative;
}

#carpool .relative {
    position: relative;
}

#carpool video {
    display: block;
}

#carpool input::-webkit-input-placeholder {
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool input:-moz-placeholder { /* Firefox 18- */
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool input::-moz-placeholder {  /* Firefox 19+ */
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif; 
}

#carpool input:-ms-input-placeholder {  
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool textarea::-webkit-input-placeholder {
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool textarea:-moz-placeholder { /* Firefox 18- */
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool textarea::-moz-placeholder {  /* Firefox 19+ */
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif; 
}

#carpool textarea:-ms-input-placeholder {  
   color: #999;
   font-size: 20px;
   font-weight: 400;
   font-family: 'HelveticaNeue-Light', 'Tahoma', serif;
}

#carpool .bgMedia {
    width: 100%;
    height: 100vh;
    -webkit-background-size:cover; 
    -moz-background-size:cover; 
    -o-background-size:cover; 
    background-size:cover;
    background-repeat: no-repeat;
}

#carpool #welcome .welcomeVideo-overlay {
    position: absolute;
    bottom: 182px;
    left: 0;
    right: 0;
    /*left: 238px;
    width: 435px;
    height: 280px;*/
}

#carpool #welcome .welcomeVideo-overlay .welcomeWrapper {
    width: 435px;
    height: 280px;
}

#carpool #welcome .welcomeVideo-overlay .welcomeLogo {
    background: transparent url('/carpool/img/svg_icons/carpool_logo_full_color.svg') no-repeat;
    background-size: contain;
    height: 56px;
    width: 210px;
    margin-bottom: 28px;
}

#carpool #welcome .welcomeVideo-overlay .welcomeText {
    font-size: 16px;
    line-height: 22px;
    margin-bottom: 21px;
}

#carpool #welcome .welcomeVideo-overlay .welcomeMenu a {
    text-decoration: none;
    color: #000;
    font-size: 16px;
}

#carpool #welcome .welcomeVideo-overlay .welcomeMenu li {
    display: inline;
    margin-right: 21px;
    list-style: none;
}
/* ... */

